# cli_todo_jd

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
cli-todo-jday/: main.py
cli_todo/: cli_entry.py  main.py
cli_todo_jd/: cli_entry.py  helpers.py  main.py
cli_todo_jd/cli/: cli_entry.py  cli_menu.py
cli_todo_jd/web/: app.py
cli_todo_jd/web/templates/: index.html
cli_todo_jday/: main.py
src/: main.rs
