[project]
name = "cli-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest"
]

[project.scripts]
todo_add = "cli_todo.cli_entry:add_item"
todo_remove = "cli_todo.cli_entry:remove_item"
todo_list = "cli_todo.cli_entry:list_items"
todo_clear = "cli_todo.cli_entry:clear_list"
todo_menu =  "cli_todo.main:cli_menu"
