[project]
name = "cli-todo-jd"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.1.1",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "bump-my-version"
]

[project.scripts]
todo_add = "cli_todo_jd.cli_entry:add_item"
todo_remove = "cli_todo_jd.cli_entry:remove_item"
todo_list = "cli_todo_jd.cli_entry:list_items"
todo_clear = "cli_todo_jd.cli_entry:clear_list"
todo_menu =  "cli_todo_jd.cli_entry:todo_menu"

[tool.bumpversion]
current_version = "0.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = "--no-verify"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
